made ui tests more modern and changed some small stuff elsewhere for ui tests EDT violations however :(